Bug 413424 - Annoying kde plasma behavior: when I resize a window it maximizes
Summary: Annoying kde plasma behavior: when I resize a window it maximizes
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: core (other bugs)
Version First Reported In: 5.17.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Vlad Zahorodnii
URL: https://phabricator.kde.org/D25366
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-25 07:53 UTC by Nadir
Modified: 2019-11-18 14:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.17.4
Sentry Crash Report:
vlad.zahorodnii: Wayland-
vlad.zahorodnii: X11+
vlad.zahorodnii: ReviewRequest+


Attachments
Video showing that a window auto-maximize (3.30 MB, video/webm)
2019-10-25 08:05 UTC, Nadir
Details
MAXIMIZE VERTICAL Kwin script (3.25 KB, application/gzip)
2019-11-11 23:50 UTC, Nadir
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nadir 2019-10-25 07:53:52 UTC
SUMMARY
Annoying kde plasma behavior: when I resize a window it maximizes

For a few weeks, I have this strange behavior on Arch ( v5.17.1)

First I thought it was random, or it was because of the mouse. It is because of my usage.
- I have a shortcut to maximize window vertically that I use like millions of times a day
- If I then try to resize a window, with alt+right mouse button, the window gets fullscreen as soon as I release the mouse button ;-(
- there my be other situations where the window miximizes, but believe me, on a 4K screen it is VERY annoying

Before, everything worked fine. From October it appeared.
I looked for a sort of gesture/intent parameter, nothing near that in the settings.

I hope someone will help.

STEPS TO REPRODUCE
1. I have a shortcut to maximize window vertically 
2. If I then try to resize a window, with alt+right mouse button
3. the window gets fullscreen as soon as I release the mouse button

OBSERVED RESULT

Window is maximized

EXPECTED RESULT

Previously the window just stays in expected size


SOFTWARE/OS VERSIONS

Linux/KDE Plasma: 5.17.1
(available in About System)
KDE Plasma Version: 5.17.1
KDE Frameworks Version: 5.63.0
Qt Version: 5.13.1
Comment 1 Nadir 2019-10-25 08:05:24 UTC
Created attachment 123472 [details]
Video showing that a window auto-maximize

when I release mouse button, the window goes fullscreen by itself
Comment 2 Nadir 2019-11-06 16:55:03 UTC
Not very active here.
I ended up creating a Kwin script to mimic the "maximize vertically" action without setting the window maximized flag.
Comment 3 Nadir 2019-11-06 16:58:44 UTC
So pb is: when I try to resize a window that has been maximized vertically using a shortcut to the kwin action, resizing using alt+right mouse button, the window gets fully maximized (fullscreen) as soon as I release the right mouse button.
Comment 4 Piotr Budny 2019-11-10 21:38:13 UTC
Same here:
https://bugs.kde.org/show_bug.cgi?id=412888
Comment 5 Piotr Budny 2019-11-10 21:41:04 UTC
(In reply to Nadir from comment #2)
> Not very active here.
> I ended up creating a Kwin script to mimic the "maximize vertically" action
> without setting the window maximized flag.

Can you please upload script?
Comment 6 Nadir 2019-11-11 23:50:39 UTC
Created attachment 123848 [details]
MAXIMIZE VERTICAL Kwin script

MAXIMIZE VERTICAL
Kwin script to mimic the "maximize vertically" action without setting the window maximized flag.
Comment 7 Nadir 2019-11-11 23:53:15 UTC
The script shall be unzipped into .local/share/kwin/scripts
then a global key combination to activate the feature on the current window.
Comment 8 Vlad Zahorodnii 2019-11-18 14:07:33 UTC
Git commit b97d9ad681e9e60ed1a296c01c1d4328f090c659 by Vlad Zahorodnii.
Committed on 18/11/2019 at 14:05.
Pushed by vladz into branch 'Plasma/5.17'.

Fix the order of arguments passed to changeMaximize method

Summary:
Related: bug 412888, bug 413554
FIXED-IN: 5.17.4

Reviewers: #kwin, davidedmundson

Reviewed By: #kwin, davidedmundson

Subscribers: davidedmundson, kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D25366

M  +1    -1    geometry.cpp

https://commits.kde.org/kwin/b97d9ad681e9e60ed1a296c01c1d4328f090c659