Fix the order of arguments passed to changeMaximize method

Summary:
BUG: 413424
BUG: 412888
BUG: 413554
FIXED-IN: 5.17.4

Reviewers: #kwin, davidedmundson

Reviewed By: #kwin, davidedmundson

Subscribers: davidedmundson, kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D25366